Archive/9a7b737b7c19e6a2d2d561b702730a35-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:5:26: error: 'max_align_t' is not a member of 'std'
     std::cout << alignof(std::max_align_t) << '\n';
                          ^
main.cpp:5:26: note: suggested alternative:
In file included from /usr/local/include/c++/4.8.0/cstddef:42:0,
                 from main.cpp:2:
/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.8.0/include/stddef.h:425:3: note:   'max_align_t'
 } max_align_t;
   ^
